--- a/WebHandlers/WebHandlers.nuspec
+++ b/WebHandlers/WebHandlers.nuspec
@@ -6,9 +6,9 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <licenseUrl>https://github.com/solmead/LessGradientHelpers</licenseUrl>
+    <projectUrl>https://github.com/solmead/LessGradientHelpers</projectUrl>
+    <iconUrl>https://github.com/solmead/LessGradientHelpers</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Initial Release.</releaseNotes>
@@ -17,6 +17,8 @@
   </metadata>
   <files>
     <file src="Content\web.config.transform" target="Content" />
-    <file src="Content\includes.less" target="Content" />
+    <file src="Content\Content\includes.less" target="Content\Content" />
+    <file src="Content\App_Start\WebHandlers.cs.pp" target="Content\App_Start" />
+    <file src="Content\App_Start\WebHandlers.vb.pp" target="Content\App_Start" />
   </files>
 </package>
