--- a/WebHandlers/WebHandlers.vbproj
+++ b/WebHandlers/WebHandlers.vbproj
@@ -106,8 +106,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\App_Start\WebHandlers.vb.pp" />
-    <None Include="Content\App_Start\WebHandlers.cs.pp" />
+    <None Include="Content\App_Start\WebHandlersConfig.vb.pp" />
+    <None Include="Content\App_Start\WebHandlersConfig.cs.pp" />
     <None Include="Content\Content\Includes.less" />
     <None Include="Content\Web.Config.Transform" />
     <None Include="My Project\Application.myapp">
