--- a/WebHandlers/WebHandlers.vbproj
+++ b/WebHandlers/WebHandlers.vbproj
@@ -106,6 +106,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Content\App_Start\WebHandlersConfig.vb.pp" />
     <None Include="Content\App_Start\WebHandlersConfig.cs.pp" />
     <None Include="Content\Content\Includes.less" />
